<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Rencana Aksi"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/etRencanaAksi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border_edit_text_success"
            android:gravity="top"
            android:hint="Rencana Aksi"
            android:inputType="textMultiLine"
            android:maxHeight="200dp"
            android:minHeight="80dp"
            android:padding="6dp"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/fileLampiran"
            android:textColor="@android:color/black"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/infoLampiran"
            android:textColor="@android:color/black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/typeFormatFile"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_marginRight="4dp"
                android:id="@+id/tvFileLampiran"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center_vertical"
                android:hint="@string/noFileChosen"
                android:background="@drawable/border_choose_file_success"
                android:lines="2"
                android:paddingHorizontal="8dp"
                android:textSize="12sp" />

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.5"
                app:cardCornerRadius="6dp"
                app:cardElevation="0dp">

                <Button
                    android:id="@+id/btnChooseFile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/gray_btn_bg_color"
                    android:clickable="true"
                    android:elevation="2dp"
                    android:foreground="?attr/selectableItemBackground"
                    android:text="Choose File"
                    android:textAllCaps="false"
                    android:textColor="@color/colorBgWhite"
                    android:textSize="12sp" />
            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:indeterminate="true"
        android:indeterminateTint="@color/colorAccent" />

</RelativeLayout>