<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActionKeputusan.TambahKeputusanActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_horizontal"
            app:layout_scrollFlags="enterAlways|scroll"
            app:popupTheme="@style/AppTheme.AppBarOverlay"
            app:title="@string/titleTambahKeputusan"
            app:titleTextColor="@android:color/white" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <View
                android:layout_width="match_parent"
                android:layout_height="350dp"
                android:layout_weight="1"
                android:background="@color/colorSubmit" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_marginHorizontal="20dp"
                android:layout_marginBottom="40dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="8dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:paddingHorizontal="20dp"
                        android:paddingTop="20dp">

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginBottom="16dp"
                            android:gravity="center"
                            android:text="@string/titleTambahKeputusan"
                            android:textColor="@android:color/black"
                            android:textSize="18sp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/programId"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvProgramID"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginVertical="5dp"
                                android:hint="@string/programId"
                                android:paddingHorizontal="8dp"
                                android:paddingVertical="5dp"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.8dp"
                                android:background="@color/blue_btn_bg_color" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/namaAgenda"
                                android:textSize="14sp" />

                            <Spinner
                                android:id="@+id/spNamaAgenda"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.8dp"
                                android:background="@color/blue_btn_bg_color" />

                        </LinearLayout>


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/tanggalTarget"
                                android:textSize="14sp" />

                            <TextView
                                android:id="@+id/tvTglTarget"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="10dp"
                                android:clickable="true"
                                android:drawableEnd="@drawable/ic_round_date_range"
                                android:foreground="?attr/selectableItemBackground"
                                android:hint="@string/pilihTanggalTarget"
                                android:paddingHorizontal="8dp"
                                android:paddingVertical="5dp"
                                android:textColor="@android:color/black"
                                android:textSize="16sp" />

                            <View
                                android:id="@+id/vTglTarget"
                                android:layout_width="match_parent"
                                android:layout_height="0.8dp"
                                android:background="@color/blue_btn_bg_color" />

                            <TextView
                                android:id="@+id/tvTglTarget_ErrorMessage"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingHorizontal="8dp"
                                android:text="@string/ErrorMessage_TglTarget"
                                android:textColor="@color/red_btn_bg_color"
                                android:textSize="12sp"
                                android:visibility="gone" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/keputusan"
                                android:textSize="14sp" />

                            <EditText
                                android:id="@+id/etKeputusan"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:layout_marginTop="8dp"
                                android:layout_marginBottom="2dp"
                                android:background="@drawable/border_edit_text_success"
                                android:gravity="top"
                                android:hint="@string/keputusan"
                                android:maxHeight="200dp"
                                android:minHeight="100dp"
                                android:padding="8dp"
                                android:textSize="16sp" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/pic"
                                android:textSize="14sp" />

                            <Spinner
                                android:id="@+id/spPIC"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.8dp"
                                android:background="@color/blue_btn_bg_color" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/menu_approval"
                                android:textSize="14sp" />

                            <Spinner
                                android:id="@+id/spApproval"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.8dp"
                                android:background="@color/blue_btn_bg_color" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginVertical="5dp"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/verifikator"
                                android:textSize="14sp" />

                            <Spinner
                                android:id="@+id/spVerifikator"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content" />

                            <View
                                android:layout_width="match_parent"
                                android:layout_height="0.8dp"
                                android:layout_marginBottom="20dp"
                                android:background="@color/blue_btn_bg_color" />

                        </LinearLayout>

                    </LinearLayout>

                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:layout_gravity="bottom"
                        android:layout_marginHorizontal="20dp"
                        app:cardBackgroundColor="@color/colorRipple"
                        app:cardCornerRadius="6dp"
                        app:cardElevation="4dp">

                        <androidx.cardview.widget.CardView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_margin="0.5dp"
                            app:cardCornerRadius="6dp"
                            app:cardElevation="0dp">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:orientation="horizontal">

                                <Button
                                    android:id="@+id/btnCancel"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:background="@color/colorBgWhite"
                                    android:clickable="true"
                                    android:elevation="0dp"
                                    android:foreground="?attr/selectableItemBackground"
                                    android:text="@string/dialog_cancel"
                                    android:textAllCaps="false"
                                    android:textColor="@color/colorSubmit"
                                    android:textSize="16sp" />

                                <Button
                                    android:id="@+id/btnTambah"
                                    android:layout_width="0dp"
                                    android:layout_height="match_parent"
                                    android:layout_weight="1"
                                    android:background="@color/colorSubmit"
                                    android:clickable="true"
                                    android:elevation="0dp"
                                    android:foreground="?attr/selectableItemBackground"
                                    android:text="@string/tambah"
                                    android:textAllCaps="false"
                                    android:textColor="@android:color/white"
                                    android:textSize="16sp" />

                            </LinearLayout>

                        </androidx.cardview.widget.CardView>

                    </androidx.cardview.widget.CardView>

                    <Space
                        android:layout_width="match_parent"
                        android:layout_height="30dp" />

                </LinearLayout>

            </androidx.cardview.widget.CardView>

        </RelativeLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>